--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+==Stack Overflow
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This App has been made for study and to show to employer some of my skills. And for fun, of course :-) Actually, this is a functional clone of well known Q&A site — Stack Overflow.
 
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+Actual version is “0.01 preAlpha”
